[package]
name = "podcasts-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "1.0.147", features = ["derive"] }
log = "^0.4"
