[package]
name = "podcast_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
once_cell = "1.15.0"
rand = "0.8.5"
log = "^0.4"
